--- a/documents/docker/docker-compose.yml
+++ b/documents/docker/docker-compose.yml
@@ -27,12 +27,6 @@ services:
       - "5432:5432"
     restart: always
 
-  adminer:
-    image: adminer
-    ports:
-      - "3307:8080"
-    restart: always
-
   redis:
     image: redis
     command: redis-server --requirepass 123456
@@ -47,16 +41,6 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: root
     ports:
       - "27017:27017"
-    restart: always
-
-  mongo-express:
-    image: mongo-express
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: root
-      ME_CONFIG_MONGODB_URL: mongodb://root:root@mongo:27017/
-    ports:
-      - "27018:8081"
     restart: always
 
   minio:
@@ -78,7 +62,7 @@ services:
     restart: always
 
   elasticsearch:
-    image: elasticsearch
+    image: elasticsearch:8.2.0
     environment:
       discovery.type: single-node
     ports:
@@ -87,7 +71,7 @@ services:
     restart: always
 
   kibana:
-    image: kibana
+    image: kibana:8.2.0
     ports:
       - "5601:5601"
     depends_on:
